# summer_of_sql

./: .sqlfluff  Week_2 _Preppin_Data.sql  pyproject.toml  week_1_murder_mystery.sql
